--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <script type="module" src="./js/switch.js"></script>
 <script type="module" src="./js/header.js"></script>
-<script type="module" src="./js/sider-bar.js"></script>
+<script type="module" src="./js/side-bar.js"></script>
 <script type="module" src="./js/app.js"></script>
 <script type="module" src="./js/payment-instrument.js"></script>
 </body>
