Starting with postilion portal

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="header" id="header"></div>
     <div class="side-bar"></div>
     <div class="content" id="content"></div>
+    <div style="position: absolute; top: 160px; left: 690px">Welcome to Postilion Portal Financial Institute Landing Page.</div>
 </main>
 
 <script type="module" src="./js/switch.js"></script>
