--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Postilion Portal</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/customerView.css" />
+    <link rel="stylesheet" href="./css/cards.css" />
     <link rel="stylesheet" href="./css/switch.css" />
     <link rel="stylesheet" href="./css/payment-instrument.css" />
     <link rel="icon" type="image/x-icon" href="./img/profile.png" />
@@ -19,7 +19,7 @@
     <div style="position: absolute; top: 160px; left: 690px">Welcome to Postilion Portal Financial Institute Landing Page.</div>
 </main>
 
-<script type="module" src="./js/switch.js"></script>
+<script type="module" src="./js/cards.js"></script>
 <script type="module" src="./js/header.js"></script>
 <script type="module" src="./js/side-bar.js"></script>
 <script type="module" src="./js/app.js"></script>
