Now we starting

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <main class="main-content" id="main-content">
     <div class="header" id="header"></div>
     <div class="side-bar"></div>
-    <div class="content" id="content"></div>
-    <div style="position: absolute; top: 160px; left: 690px">Welcome to Postilion Portal Financial Institute Landing Page.</div>
+    <div class="content" id="content"><div style="position: absolute; top: 160px; left: 690px">Welcome to Postilion Portal Financial Institute Landing Page.</div></div>
+
 </main>
 
 <script type="module" src="./js/cards.js"></script>
