--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script type="module" src="./js/cards.js"></script>
 <script type="module" src="./js/header.js"></script>
 <script type="module" src="./js/side-bar.js"></script>
-<script type="module" src="./js/app.js"></script>
+<script type="module" src="./js/navigation.js"></script>
 <script type="module" src="./js/payment-instrument.js"></script>
 </body>
 </html>
