Now we starting

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 <script type="module" src="./js/header.js"></script>
 <script type="module" src="./js/side-bar.js"></script>
 <script type="module" src="./js/navigation.js"></script>
-<script type="module" src="./js/payment-instrument.js"></script>
+<script type="module" src="./js/Accounts.js"></script>
 </body>
 </html>
