--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 <script type="module" src="./js/side-bar.js"></script>
 <script type="module" src="./js/navigation.js"></script>
 <script type="module" src="./js/Accounts.js"></script>
+<script type="module" src="./js/Transactions.js"></script>
 </body>
 </html>
